[JSC] Concurrent byteOffsetImpl should not assume non-detached array-buffer https://bugs.webkit.org/show_bug.cgi?id=237935

Reviewed by Saam Barati.

r279707 is not enough to fix the issue since underlying ArrayBuffer can be also detached concurrently to
the compiler thread too. This patch fixes it by using dataWithoutPACValidation in the concurrent compiler
thread.

* runtime/ArrayBuffer.h:
(JSC::ArrayBufferContents::dataWithoutPACValidation const):
(JSC::ArrayBuffer::dataWithoutPACValidation):
(JSC::ArrayBuffer::dataWithoutPACValidation const):
* runtime/JSArrayBufferViewInlines.h:
(JSC::JSArrayBufferView::byteOffsetImpl):



Canonical link: https://commits.webkit.org/248470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291331 268f45cc-cd09-0410-ab3c-d52691b4dbfc